--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,9 @@ a {
   letter-spacing: 0.02em;
 }
 
-.nav-link:hover,
+.nav-link:hover {
+  color: #404bbf;
+}
 .nav-link:focus {
   color: #404bbf;
 }
@@ -84,6 +86,7 @@ a {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 
 .hero-button {
@@ -129,12 +132,18 @@ a {
 .team {
   background: #f4f4fd;
 }
+.team-list {
+  background-color: #FFFFFF;
+}
 .team-title {
   color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+
 }
 .team-member {
   color: #2e2f42;
@@ -159,11 +168,12 @@ a {
 }
 .portfolio-title {
   color: #2e2f42;
-  text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
 }
 .portfolio-list {
   color: #2e2f42;
