--- a/css/styles.css
+++ b/css/styles.css
@@ -132,9 +132,11 @@ a {
 .team {
   background: #f4f4fd;
 }
+
 .team-list {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
+
 .team-title {
   color: #2e2f42;
   font-size: 36px;
@@ -143,7 +145,6 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-
 }
 .team-member {
   color: #2e2f42;
